--- a/composer.json
+++ b/composer.json
@@ -5,23 +5,30 @@
     "type": "magento2-module",
     "description": "DHL business customer shipping extension for Magento",
     "require": {
-        "php": "~5.6.5|7.0.2|7.0.4|~7.0.6|~7.1.0",
+        "php": "7.0.2|7.0.4|~7.0.6|~7.1.0",
         "dhl/lib-shipping-mx": "~0.8",
-        "magento/framework": "^101.0.0 || ^100.1.4",
-        "magento/module-backend": "^100.1.2",
-        "magento/module-checkout": "^100.1.4",
-        "magento/module-config": "^101.0.0 || ^100.1.2",
-        "magento/module-customer": "^101.0.0 || ^100.1.4",
-        "magento/module-directory": "^100.1.2",
-        "magento/module-quote": "^101.0.0 || ^100.1.3",
-        "magento/module-sales": "^101.0.0 || ^100.1.4",
-        "magento/module-shipping": "^100.1.2",
-        "magento/module-store": "^100.1.4",
-        "magento/zendframework1": "^1.12.16"
+        "magento/framework": "^101.0.4",
+        "magento/module-backend": "^100.2.4",
+        "magento/module-catalog": "^102.0.4",
+        "magento/module-catalog-inventory": "^100.2.3",
+        "magento/module-checkout": "^100.2.4",
+        "magento/module-config": "^101.0.4",
+        "magento/module-cron": "^100.2.2",
+        "magento/module-customer": "^101.0.4",
+        "magento/module-directory": "^100.2.3",
+        "magento/module-dhl": "^100.2.1",
+        "magento/module-eav": "^101.0.3",
+        "magento/module-payment": "^100.2.2",
+        "magento/module-quote": "^101.0.3",
+        "magento/module-sales": "^101.0.3",
+        "magento/module-shipping": "^100.2.4",
+        "magento/module-store": "100.2.3",
+        "magento/module-ui": "101.0.4",
+        "magento/zendframework1": "~1.13.0"
     },
     "require-dev": {
-      "phpunit/phpunit": "^5.7",
-      "magento/module-offline-payments": "^100.1.1"
+      "phpunit/phpunit": "~6.2.0",
+      "magento/module-offline-payments": "^100.2.0"
     },
     "support": {
         "wiki": "http://dhl.support.netresearch.de/",
