--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,7 @@ phpcs:
   only:
   - develop
   - master
+  - /^(release|hotfix)-.*$/
   script:
   - phpcs --standard=MEQP2
           --severity=10
