--- a/composer.json
+++ b/composer.json
@@ -1,33 +1,14 @@
 {
     "name": "dhl/module-shipping-m2",
-    "version": "0.9.1",
+    "version": "0.9.1-m2",
     "license": "OSL-3.0",
     "type": "magento2-module",
     "description": "DHL business customer shipping extension for Magento",
     "require": {
-        "php": "7.0.2|7.0.4|~7.0.6|~7.1.0",
-        "dhl/lib-shipping-mx": "~0.9",
-        "magento/framework": "^101.0.4",
-        "magento/module-backend": "^100.2.4",
-        "magento/module-catalog": "^102.0.4",
-        "magento/module-catalog-inventory": "^100.2.3",
-        "magento/module-checkout": "^100.2.4",
-        "magento/module-config": "^101.0.4",
-        "magento/module-cron": "^100.2.2",
-        "magento/module-customer": "^101.0.4",
-        "magento/module-directory": "^100.2.3",
-        "magento/module-eav": "^101.0.3",
-        "magento/module-payment": "^100.2.2",
-        "magento/module-quote": "^101.0.3",
-        "magento/module-sales": "^101.0.3",
-        "magento/module-shipping": "^100.2.4",
-        "magento/module-store": "^100.2.3",
-        "magento/module-ui": "^101.0.4",
-        "magento/zendframework1": "~1.13.0"
+        "dhl/lib-shipping-mx": "~0.9"
     },
     "require-dev": {
-      "phpunit/phpunit": "~6.2.0",
-      "magento/module-offline-payments": "^100.2.0"
+      "phpunit/phpunit": "~6.2.0"
     },
     "support": {
         "wiki": "http://dhl.support.netresearch.de/",
